--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ service-worker: true
 page-mathjax: false
 
 # 
-remote_theme : https://github.com/yoon1
+remote_theme : https://github.com/Huxpro/huxpro.github.io
 
 # Friends
 friends: [
