--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: yoon Blog
 SEOTitle: 윤혜정 | yoon Blog
-#header-img: img/home-bg.jpg
+header-img: img/home-bg.jpg
 email: aksemfdjwnj@gmail.com
 description: "my blog"
 keyword: "yoon, blog"
@@ -75,8 +75,8 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
-#sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "For the next quantum leap<br> T E S T"
+sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
