--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+remote_theme : Huxpro/huxpro.github.io
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
 # Site settings
 title: Hux Blog
 SEOTitle: 黄玄的博客 | Hux Blog
